infrastructure/k8s/ingress/ebank-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ebank-ingress
  namespace: svc
  annotations:
    cert-manager.io/issuer: ebank-ca
spec:
  ingressClassName: nginx
  tls:
    - hosts: [ "ebank.local" ]
      secretName: ebank-tls
  rules:
    - host: ebank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port: { number: 80 }
